--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
     margin: 0;
     padding: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -12,18 +13,14 @@ html, body {
 .container{
     display: flex;
     flex-wrap: wrap;
-    height: 50%;
-    width: 50%;
+    height: 500px;
+    width: 500px;
+    border: 2px solid black;
 }
 
 .child-div {
-    width: 6.25%;
-    padding-top: 6.25%;
-    box-sizing: border-box;
-    /* border: 1px solid black; */
+    
+    border: 1px solid black;
+    flex-shrink: 0;
     background-color: #183B4E;
-}
-
-.child-div:hover {
-    background-color: #27548A;
 }
