--- a/style.css
+++ b/style.css
@@ -6,21 +6,32 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #309898;
+    
 }
 
 .setupContainer {
     display: flex;
+    width: 800px;
     justify-content: space-around;
-    width: 500px;
-    margin-bottom: 30px;
+    gap: 30px;
+    
 }
 
 button {
-    width: 100px;
+    font-family: "Lobster", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 50px;
+    font-size: 25px;
+    height: 50px;
+    width: 150px;
     padding: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
+    background-color: #FF9F00;
+    color: white;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
 }
 
@@ -39,6 +50,19 @@ button {
 
 #dimensionsButton:hover {
     animation: pulse-on-hover 0.9s infinite ease-in-out;
+}
+
+@keyframes pulseShadow {
+    0%, 100% {
+        box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+    }50% {
+        box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
+    }
+}
+
+#blackButton:hover {
+    transform: scale(1.1);  
+    animation: pulseShadow 1s infinite ease-in-out;
 }
 
 #rainbowButton {
@@ -71,7 +95,7 @@ button {
 #resetButton::after {
     content: "";
     position: absolute;
-    background-color: #fff;
+    background-color: #FF9F00;
     top: 0;
     left: 0;
     height: 100%;
@@ -86,7 +110,7 @@ button {
 }
 
 #resetButton:hover::after {
-    animation: wipeText 1s linear forwards;
+    animation: wipeText 0.5s linear forwards;
 }
 
 @keyframes wipeText {
@@ -99,6 +123,8 @@ button {
 
 .container{
     display: flex;
+    position: relative;
+    z-index: 2;
     flex-wrap: wrap;
     height: 500px;
     width: 500px;
@@ -106,7 +132,36 @@ button {
 }
 
 .child-div {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     box-sizing: border-box;
-    background-color: #183B4E;
+}
+
+#sketch-wrapper {
+    position: relative;
+    width: 1000px;
+    height: 1000px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+#etch-frame {
+    position: absolute;
+    top : 5%;
+    width: 94%;
+    height: 95%;
+    z-index: 1;
+    object-fit: cover;
+}
+
+@keyframes shake {
+    0%, 100% {transform: translate(0);}
+    20%, 60% {transform: translateX(-30px);}
+    40%, 80% {transform: translateX(30px);}
+}
+
+.shake {
+    animation: shake 0.5s;
 }
