--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 
 html, body {
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #309898;
-    
+}
+
+body::-webkit-scrollbar {
+  display: none; 
 }
 
 .setupContainer {
@@ -70,15 +75,23 @@ button {
 }
 
 #rainbowButton:hover {
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
     box-shadow: 
-    0 0 10px red,
-    0 0 20px orange,
-    0 0 30px yellow,
-    0 0 40px green,
+    0 0 5px red,
+    0 0 10px orange,
+    0 0 15px gold,
+    0 0 20px yellow,
+    0 0 25px lime,
+    0 0 30px green,
+    0 0 35px turquoise,
+    0 0 40px cyan,
+    0 0 45px dodgerblue,
     0 0 50px blue,
-    0 0 60px indigo,
-    0 0 70px violet;
+    0 0 55px indigo,
+    0 0 60px violet,
+    0 0 65px magenta,
+    0 0 70px pink
+
 }
 
 #resetButton {
@@ -128,23 +141,19 @@ button {
     flex-wrap: wrap;
     height: 500px;
     width: 500px;
-    
 }
 
 .child-div {
-    /* border: 1px solid black; */
     box-sizing: border-box;
 }
 
 #sketch-wrapper {
     position: relative;
     width: 1000px;
-    height: 1000px;
-    margin-bottom: 20px;
+    height: 900px;
     display: flex;
     align-items: center;
     justify-content: center;
-    
 }
 
 #etch-frame {
@@ -165,3 +174,4 @@ button {
 .shake {
     animation: shake 0.5s;
 }
+
